standards/gnds-2.0-alpha/alpha/c/src/v2.0/tsl/SelfScatteringKernel.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// SelfScatteringKernel is the basic handle type in this file. Example:
//    // Create a default SelfScatteringKernel object:
//    SelfScatteringKernel handle = SelfScatteringKernelDefault();
// Functions involving SelfScatteringKernel are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_ALPHA_V2_0_TSL_SELFSCATTERINGKERNEL
#define C_INTERFACE_ALPHA_V2_0_TSL_SELFSCATTERINGKERNEL

#include "GNDStk.h"
#include "v2.0/common/Gridded3d.h"
#include "v2.0/tsl/SCTApproximation.h"
#include "v2.0/tsl/FreeGasApproximation.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct SelfScatteringKernelClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ SelfScatteringKernel
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct SelfScatteringKernelClass *SelfScatteringKernel;

// --- Const-aware handles.
typedef const struct SelfScatteringKernelClass *const ConstHandle2ConstSelfScatteringKernel;
typedef       struct SelfScatteringKernelClass *const ConstHandle2SelfScatteringKernel;
typedef const struct SelfScatteringKernelClass *      Handle2ConstSelfScatteringKernel;
typedef       struct SelfScatteringKernelClass *      Handle2SelfScatteringKernel;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstSelfScatteringKernel
SelfScatteringKernelDefaultConst();

// +++ Create, default
extern_c Handle2SelfScatteringKernel
SelfScatteringKernelDefault();

// --- Create, general, const
extern_c Handle2ConstSelfScatteringKernel
SelfScatteringKernelCreateConst(
   const bool symmetric,
   ConstHandle2ConstGridded3d gridded3d,
   ConstHandle2ConstSCTApproximation SCTApproximation,
   ConstHandle2ConstFreeGasApproximation freeGasApproximation
);

// +++ Create, general
extern_c Handle2SelfScatteringKernel
SelfScatteringKernelCreate(
   const bool symmetric,
   ConstHandle2ConstGridded3d gridded3d,
   ConstHandle2ConstSCTApproximation SCTApproximation,
   ConstHandle2ConstFreeGasApproximation freeGasApproximation
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
SelfScatteringKernelAssign(ConstHandle2SelfScatteringKernel This, ConstHandle2ConstSelfScatteringKernel from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
SelfScatteringKernelDelete(ConstHandle2ConstSelfScatteringKernel This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
SelfScatteringKernelRead(ConstHandle2SelfScatteringKernel This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
SelfScatteringKernelWrite(ConstHandle2ConstSelfScatteringKernel This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
SelfScatteringKernelPrint(ConstHandle2ConstSelfScatteringKernel This);

// +++ Print to standard output, as XML
extern_c int
SelfScatteringKernelPrintXML(ConstHandle2ConstSelfScatteringKernel This);

// +++ Print to standard output, as JSON
extern_c int
SelfScatteringKernelPrintJSON(ConstHandle2ConstSelfScatteringKernel This);


// -----------------------------------------------------------------------------
// Metadatum: symmetric
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
SelfScatteringKernelSymmetricHas(ConstHandle2ConstSelfScatteringKernel This);

// +++ Get
// +++ Returns by value
extern_c bool
SelfScatteringKernelSymmetricGet(ConstHandle2ConstSelfScatteringKernel This);

// +++ Set
extern_c void
SelfScatteringKernelSymmetricSet(ConstHandle2SelfScatteringKernel This, const bool symmetric);


// -----------------------------------------------------------------------------
// Child: gridded3d
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
SelfScatteringKernelGridded3dHas(ConstHandle2ConstSelfScatteringKernel This);

// --- Get, const
extern_c Handle2ConstGridded3d
SelfScatteringKernelGridded3dGetConst(ConstHandle2ConstSelfScatteringKernel This);

// +++ Get, non-const
extern_c Handle2Gridded3d
SelfScatteringKernelGridded3dGet(ConstHandle2SelfScatteringKernel This);

// +++ Set
extern_c void
SelfScatteringKernelGridded3dSet(ConstHandle2SelfScatteringKernel This, ConstHandle2ConstGridded3d gridded3d);


// -----------------------------------------------------------------------------
// Child: SCTApproximation
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
SelfScatteringKernelSCTApproximationHas(ConstHandle2ConstSelfScatteringKernel This);

// --- Get, const
extern_c Handle2ConstSCTApproximation
SelfScatteringKernelSCTApproximationGetConst(ConstHandle2ConstSelfScatteringKernel This);

// +++ Get, non-const
extern_c Handle2SCTApproximation
SelfScatteringKernelSCTApproximationGet(ConstHandle2SelfScatteringKernel This);

// +++ Set
extern_c void
SelfScatteringKernelSCTApproximationSet(ConstHandle2SelfScatteringKernel This, ConstHandle2ConstSCTApproximation SCTApproximation);


// -----------------------------------------------------------------------------
// Child: freeGasApproximation
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
SelfScatteringKernelFreeGasApproximationHas(ConstHandle2ConstSelfScatteringKernel This);

// --- Get, const
extern_c Handle2ConstFreeGasApproximation
SelfScatteringKernelFreeGasApproximationGetConst(ConstHandle2ConstSelfScatteringKernel This);

// +++ Get, non-const
extern_c Handle2FreeGasApproximation
SelfScatteringKernelFreeGasApproximationGet(ConstHandle2SelfScatteringKernel This);

// +++ Set
extern_c void
SelfScatteringKernelFreeGasApproximationSet(ConstHandle2SelfScatteringKernel This, ConstHandle2ConstFreeGasApproximation freeGasApproximation);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/tsl/SelfScatteringKernel/src/custom.h"

#undef extern_c
#endif